--- a/docs/manual/source/02_noauth_funcs/index.tex
+++ b/docs/manual/source/02_noauth_funcs/index.tex
@@ -15,16 +15,22 @@
                 См. рис. \ref{fig:common_items_2}
 
                 \begin{enumerate}
-                    \item Ссылка на группу вконтакте http://vk.com/citizenmoscow
-                    \item Ссылка на страницу в facebook https://www.facebook.com/citizenmoscow
-                    \item Ссылка на аккаунт в twitter https://twitter.com/citizenmoscow
-                    \item Ссылка на страницу в instagram https://instagram.com/citizenmoscow/
+                    \item Ссылка на группу вконтакте 
+                        http://vk.com/citizenmoscow
+                    \item Ссылка на страницу в facebook 
+                        https://www.facebook.com/citizenmoscow
+                    \item Ссылка на аккаунт в twitter 
+                        https://twitter.com/citizenmoscow
+                    \item Ссылка на страницу в instagram 
+                        https://instagram.com/citizenmoscow/
                 \end{enumerate}
             \subsubsection{Кнопка <<вверх>>}
                 См. рис. \ref{fig:common_items_2}
                 \begin{enumerate}
-                    \item На главной и в разделах каталога при нажатии перематывает страницы к фильтру. 
-                    \item На вторичных страницах перематывает страницу к началу(к главному меню)
+                    \item На главной и в разделах каталога при нажатии 
+                        перематывает страницы к фильтру. 
+                    \item На вторичных страницах перематывает страницу к 
+                        началу(к главному меню)
                 \end{enumerate}
         \subsection{Главное меню}
             См. рис. \ref{fig:common_items_1}
@@ -38,7 +44,8 @@
             \subsubsection{Ссылка на правила.}
                 \begin{enumerate}
                     \item Адрес ссылки /rules/
-                    \item С /rules/ идет редирект на /rules/hiw/ (см. \ref{sec:rules_hiw})
+                    \item С /rules/ идет редирект на /rules/hiw/ (см. 
+                        \ref{sec:rules_hiw})
                     \item Ссылка активна на всех разделах каталога /rules/*
                 \end{enumerate}
             
@@ -46,7 +53,8 @@
                 \begin{enumerate}
                     \item Placeholder - <<поиск>>
                     \item Отправка запроса на поиск по нажатию <<Enter>>
-                    \item Переход на страницу поиска (\ref{sec:search_page}) при отправке формы
+                    \item Переход на страницу поиска (\ref{sec:search_page}) 
+                        при отправке формы
                 \end{enumerate}
 
        \subsection{Важные ссылки}
@@ -55,24 +63,35 @@
 
             \subsubsection{О проекте}
                 \begin{enumerate}
-                    \item Ссылка указывает на страницу <<как это работает>> (\ref{sec:rules_hiw})
+                    \item Ссылка указывает на страницу <<как это работает>> 
+                        (\ref{sec:rules_hiw})
                 \end{enumerate}
             \subsubsection{Часто задаваемые вопросы}
                 \begin{enumerate}
-                    \item Ссылка указывает на страницу <<faq>> (\ref{sec:page_faq})
+                    \item Ссылка указывает на страницу <<faq>> 
+                        (\ref{sec:page_faq})
                 \end{enumerate}
             \subsubsection{Обратная связь.}
                 См. рис. \ref{fig:common_items_3}
 
                 \begin{enumerate}
-                    \item Ссылка вызывает модальное окно-\gloss{FBF} без перезагрузки страницы
-                    \item \gloss{FBF} скрывается кликом на кнопку <<отмена>> или по нажатию <<Esc>>
-                    \item Форма имеет два поля для заполнения <<тип обращения>> и <<сообщение>>.
-                    \item Сообщение не отправляется, если не заполнено поле <<сообщение>>, выводится сообщение с просьбой заполнить это поле
-                    \item Сообщение не отправляется, если не выбрано значение в поле <<тип обращения>>, выводится сообщение с просьбой заполнить это поле
+                    \item Ссылка вызывает модальное окно-\gloss{FBF} без 
+                        перезагрузки страницы
+                    \item \gloss{FBF} скрывается кликом на кнопку <<отмена>> 
+                        или по нажатию <<Esc>>
+                    \item Форма имеет два поля для заполнения <<тип 
+                        обращения>> и <<сообщение>>.
+                    \item Сообщение не отправляется, если не заполнено поле 
+                        <<сообщение>>, выводится сообщение с просьбой 
+                            заполнить это поле
+                    \item Сообщение не отправляется, если не выбрано 
+                        значение в поле <<тип обращения>>, выводится 
+                            сообщение с просьбой заполнить это поле
                     \item Доступные типы обращений: <<другое>>.
-                    \item После успешной отправки выводится сообщение об успехе и модальное окно с формой закрывается
-                    \item После не успешной отправки выводится сообщение об ошибке и модальное окно с формой остается на месте
+                    \item После успешной отправки выводится сообщение об 
+                        успехе и модальное окно с формой закрывается
+                    \item После не успешной отправки выводится сообщение об 
+                        ошибке и модальное окно с формой остается на месте
                 \end{enumerate}
 
         \subsection{Копирайт}
@@ -80,13 +99,16 @@
             См. рис. \ref{fig:common_items_2}
 
             \begin{enumerate}
-                \item Текст <<(C) 2016, Активный гражданин, Все права защищены. Публичная оферта>>
-                \item Ссылка с <<Публичная оферта>> на <<faq>> (\ref{sec:page_faq})
+                \item Текст <<(C) 2016, Активный гражданин, Все права 
+                    защищены. Публичная оферта>>
+                \item Ссылка с <<Публичная оферта>> на <<faq>> 
+                    (\ref{sec:page_faq})
             \end{enumerate}
 
         \begin{figure}
             \includegraphics[width=170mm]{02_noauth_funcs/figures/03r.eps}
-            \caption{Общие элементы страниц(нижняя часть страницы) и тизер товара.}
+            \caption{Общие элементы страниц(нижняя часть страницы) и тизер 
+                товара.}
             \label{fig:common_items_2}
         \end{figure}
         \begin{figure}[h]
@@ -101,28 +123,41 @@
             См. рис. \ref{fig:common_items_1}
 
             \begin{enumerate}
-                \item В меню разделов магазина входят только те разделы, которые имеют товары со свойством <<Включено>>(ACTIVE)
-                \item Каждый из пунктов имеет ссылку страницу раздела каталога (2.3) вида /catalog/<траслит имени раздела>/
-                \item Пункт меню активен при нахождении на соответствующей странице раздела каталога (\ref{sec:page_catalog_section})
+                \item В меню разделов магазина входят только те разделы, 
+                    которые имеют товары со свойством <<Включено>>(ACTIVE)
+                \item Каждый из пунктов имеет ссылку страницу раздела 
+                    каталога (2.3) вида /catalog/<траслит имени раздела>/
+                \item Пункт меню активен при нахождении на соответствующей 
+                    странице раздела каталога (\ref{sec:page_catalog_section})
             \end{enumerate}
         \subsection{Фильтр по цене и интересам}
             См. рис. \ref{fig:common_items_5}
 
             \label{sec:baseitems_interest_filter}
             \begin{enumerate}
-                \item При клике по заголовку каждой из вкладок, открывается поле с выбором элементов-кнопок, имеющих
+                \item При клике по заголовку каждой из вкладок, открывается 
+                    поле с выбором элементов-кнопок, имеющих
                     отношение к этой вкладке
-                \item Вкладки <<хочу>> и <<интересуюсь>> соответствуют одноименным свойствам товаров, вкладка <<баллы>>
+                \item Вкладки <<хочу>> и <<интересуюсь>> соответствуют 
+                    одноименным свойствам товаров, вкладка <<баллы>>
                     --- свойству цена.
-                \item В каждой вкладке можно выбрать не более 3 кнопок, при попытке выбрать 4-ю выводится сообщение и 
+                \item В каждой вкладке можно выбрать не более 3 кнопок, при 
+                    попытке выбрать 4-ю выводится сообщение и 
                     выбор не происходит
-                \item Отмена выбора элемента-кнопки осуществляется повторным нажатием по ней
-                \item При выборе элемента кнопки происходит обновление области вывода тизеров товаров (см. \ref{sec:baseitems_goods_area}) в соответствии с 
+                \item Отмена выбора элемента-кнопки осуществляется повторным 
+                    нажатием по ней
+                \item При выборе элемента кнопки происходит обновление 
+                    области вывода тизеров товаров (см. 
+                        \ref{sec:baseitems_goods_area}) в соответствии с 
                     выбранным набором кнопок во всех вкладках.
-                \item Фильтрация элементов в области вывода тизеров товаров (см. \gloss{goods_tizer}) происходит по
-                    правилу <<логическое ИЛИ>> в пределах одной вкладки и <<логическое И>> между вкладками. То есть
-                    (хочу развиваться ИЛИ кататься) И (интересуюсь музыкой ИЛИ модой)
-                \item если внутри одной вкладке не выбрано ни одной кнопки --- это равноценно выбору всех.
+                \item Фильтрация элементов в области вывода тизеров товаров 
+                    (см. \gloss{goods_tizer}) происходит по
+                    правилу <<логическое ИЛИ>> в пределах одной вкладки и 
+                        <<логическое И>> между вкладками. То есть
+                    (хочу развиваться ИЛИ кататься) И (интересуюсь музыкой 
+                        ИЛИ модой)
+                \item если внутри одной вкладке не выбрано ни одной кнопки 
+                    --- это равноценно выбору всех.
             \end{enumerate}
             \subsubsection{Вкладка <<хочу>>}
                 Содержит следующие элементы для выбора: 
@@ -160,27 +195,32 @@
                 \end{enumerate}
             \subsubsection{Вкладка <<баллы>>}
             \label{sec:noauth_filter_points}
-                Для неавторизованного пользователя заменяется на ссылку <<войти>>, ведущую к форме авторизации на
+                Для неавторизованного пользователя заменяется на ссылку 
+                    <<войти>>, ведущую к форме авторизации на
                 \gloss{AG}
                 
         \subsection{Ссылки фильтра по флагам}
             См. рис. \ref{fig:common_items_5}
 
             \label{sec:baseitems_props_filter}
-            Каждый из товаров имеет следующие свойства-флаги, отображаемые на тизере (см. \gloss{goods_tizer}) иконками:
+            Каждый из товаров имеет следующие свойства-флаги, отображаемые 
+                на тизере (см. \gloss{goods_tizer}) иконками:
             \begin{enumerate}
                 \item хит;
                 \item акция;
                 \item новое.
-            \end{enumerate}
-            При клике по соответствующей ссылке в области вывода тизеров остаются только те товары, у которых установлен
+            
+                \end{enumerate}
+            При клике по соответствующей ссылке в области вывода тизеров 
+                остаются только те товары, у которых установлен
             соответствующий флаг.
 
         \subsection{Ссылки сортировки списка тизеров товаров}
             См. рис. \ref{fig:common_items_5}
             \label{sec:baseitems_goods_sort}
 
-            Порядок вывода тизеров (см. \gloss{goods_tizer}) в области вывода тизеров товаров можно установить, кликнув
+            Порядок вывода тизеров (см. \gloss{goods_tizer}) в области 
+                вывода тизеров товаров можно установить, кликнув
             по одной из ссылок:
             \begin{enumerate}
                 \item сначала дешевые;
@@ -193,9 +233,13 @@
             См. рис. \ref{fig:common_items_5}
             \label{sec:baseitems_goods_area}
 
-            Динамически подгружаемая область страницы, в которую выводятся тизеры товаров (см. \gloss{goods_tizer})
-            согласно выбранному разделу товаров (см. \ref{sec:page_catalog_section}), установленным элементам выбора фильтра по цене и интересам (см.
-            \ref{sec:baseitems_interest_filter}), фильтру по флагам (см. \ref{sec:baseitems_props_filter}) и сортируются
+            Динамически подгружаемая область страницы, в которую выводятся 
+                тизеры товаров (см. \gloss{goods_tizer})
+            согласно выбранному разделу товаров (см. 
+                \ref{sec:page_catalog_section}), установленным элементам 
+            выбора фильтра по цене и интересам (см.
+            \ref{sec:baseitems_interest_filter}), фильтру по флагам (см. 
+                \ref{sec:baseitems_props_filter}) и сортируются
             согласно выбранному в п. \ref{sec:baseitems_goods_sort} порядку.
 
         \subsection{Кнопка подгрузки.}
@@ -222,10 +266,12 @@
                 кликом на сердечко. Неавторизованный пользователь может видеть
                 эту цифру, но не может добавить товар в желаемое
             \subsubsection{Средняя оценка}
-                Показывает среднюю оценку(от 0 до 5), которую поставили пользователи, 
+                Показывает среднюю оценку(от 0 до 5), которую поставили 
+                    пользователи, 
                 заказавшие данный товар
             \subsubsection{Раздел}
-                Информационный элемент, показывающий принадлежность товара к разделю.
+                Информационный элемент, показывающий принадлежность товара к 
+                    разделю.
                 Некликабелен.
             \subsubsection{Название}
                 Название товара.
@@ -259,13 +305,18 @@
             \item
             Содержит следующие элементы
             \begin{itemize}
-                \item Фиксированная панель слева (см. \ref{sec:baseitems_fixleft_panel})
+                \item Фиксированная панель слева (см. 
+                    \ref{sec:baseitems_fixleft_panel})
                 \item Главное меню (см. \ref{sec:baseitems_main_meu})
                 \item Баннер-слайдер (см. \ref{sec:slider})
-                \item Фильтр по цене и интересам (см. \ref{sec:baseitems_interest_filter})
-                \item Ссылки фильтра по свойствам (см. \ref{sec:baseitems_props_filter})
-                \item Ссылки сортировки списка тизеров товаров (см. \ref{sec:baseitems_goods_sort})
-                \item Область вывода тизеров товаров (см. \ref{sec:baseitems_goods_area})
+                \item Фильтр по цене и интересам (см. 
+                    \ref{sec:baseitems_interest_filter})
+                \item Ссылки фильтра по свойствам (см. 
+                    \ref{sec:baseitems_props_filter})
+                \item Ссылки сортировки списка тизеров товаров (см. 
+                    \ref{sec:baseitems_goods_sort})
+                \item Область вывода тизеров товаров (см. 
+                    \ref{sec:baseitems_goods_area})
                 \item Кнопка подгрузки.  (см. \ref{sec:baseitems_goods_more})
                 \item Важные ссылки (см. \ref{sec:baseitems_important_links})
                 \item Копирайт (см. \ref{sec:baseitems_footer_copiright})
@@ -277,7 +328,8 @@
             \label{sec:slider}
             
             \begin{enumerate}
-                \item В слайдере крутятся 2 вида слайдов: слайды-картинки и слайды-товары
+                \item В слайдере крутятся 2 вида слайдов: слайды-картинки и 
+                    слайды-товары
                 \item Тип слайда задаётся в \gloss{CMS}
             \end{enumerate}
             
@@ -286,13 +338,16 @@
                     \begin{enumerate}
                         \item Картинка для отображения загружается в \gloss{CMS}
                         \item Картинка должна быть с соотношением сторон 87:50
-                        \item Если при ином соотношении сторон картинка выводится таким образом, чтобы полностью заполнять слайд
+                        \item Если при ином соотношении сторон картинка 
+                            выводится таким образом, чтобы полностью 
+                                заполнять слайд
                     \end{enumerate}
                 
                 \paragraph{Ссылка}
 
                     \begin{enumerate}
-                        \item Ссылка может вести как на внутреннюю страницу магазина, так и на внешний ресурс
+                        \item Ссылка может вести как на внутреннюю страницу 
+                            магазина, так и на внешний ресурс
                         \item Ссылка открывается в новом окне
                     \end{enumerate}
                
@@ -300,11 +355,13 @@
             \label{sec:noauth_slide_goods}
                 \paragraph{Изображение}
                     \begin{enumerate}
-                        \item В качестве ссылки на изображение берётся ссылка на главное фото товара
+                        \item В качестве ссылки на изображение берётся 
+                            ссылка на главное фото товара
                     \end{enumerate}
                 \paragraph{Ссылка}
                     \begin{enumerate}
-                        \item Ссылка ведёт на карточку товара (см. \ref{sec:goods_cart})
+                        \item Ссылка ведёт на карточку товара (см. 
+                            \ref{sec:goods_cart})
                         \item Ссылка открывается в новом окне
                     \end{enumerate}
                 \paragraph{Цена}
@@ -318,17 +375,21 @@
                 \paragraph{Описание}
                     Описание товара.
                 \paragraph{Раздел}
-                    Информационный элемент, показывающий принадлежность товара к разделю.
+                    Информационный элемент, показывающий принадлежность 
+                        товара к разделю.
                     Некликабелен.
                 \paragraph{Ссылка с числом желающих}
                     Цифра показывает сколько пользователей группы 
-                    \glossary{auth_user} выбрали этот товар в качестве желаемого 
-                    кликом на сердечко. Неавторизованный пользователь может видеть
+                    \glossary{auth_user} выбрали этот товар в качестве 
+                        желаемого 
+                    кликом на сердечко. Неавторизованный пользователь может 
+                        видеть
                     эту цифру, но не может добавить товар в желаемое
             
         \begin{figure}
             \includegraphics[width=170mm]{02_noauth_funcs/figures/01r.eps}
-            \caption{Общие элементы страниц(верхняя часть страницы) и баннер-слайдер.}
+            \caption{Общие элементы страниц(верхняя часть страницы) и 
+                баннер-слайдер.}
             \label{fig:common_items_1}
         \end{figure}
 
@@ -340,21 +401,32 @@
         
         \begin{enumerate}
             \item 
-                раздел каталога отличается от главной страницы (см. \ref{sec:noauth_mainmape}) 
-                только отсутствием банера-слайдера (см. \ref{sec:slider}) и содержит следующие элементы:
+                раздел каталога отличается от главной страницы (см. 
+                    \ref{sec:noauth_mainmape}) 
+                только отсутствием банера-слайдера (см. \ref{sec:slider}) и 
+                    содержит следующие элементы:
                 \begin{itemize}
-                    \item Фиксированная панель слева (см. \ref{sec:baseitems_fixleft_panel})
+                    \item Фиксированная панель слева (см. 
+                        \ref{sec:baseitems_fixleft_panel})
                     \item Главное меню (см. \ref{sec:baseitems_main_meu})
-                    \item Фильтр по цене и интересам (см. \ref{sec:baseitems_interest_filter})
-                    \item Ссылки фильтра по свойствам (см. \ref{sec:baseitems_props_filter})
-                    \item Ссылки сортировки списка тизеров товаров (см. \ref{sec:baseitems_goods_sort})
-                    \item Область вывода тизеров товаров (см. \ref{sec:baseitems_goods_area})
-                    \item Кнопка подгрузки.  (см. \ref{sec:baseitems_goods_more})
-                    \item Важные ссылки (см. \ref{sec:baseitems_important_links})
+                    \item Фильтр по цене и интересам (см. 
+                        \ref{sec:baseitems_interest_filter})
+                    \item Ссылки фильтра по свойствам (см. 
+                        \ref{sec:baseitems_props_filter})
+                    \item Ссылки сортировки списка тизеров товаров (см. 
+                        \ref{sec:baseitems_goods_sort})
+                    \item Область вывода тизеров товаров (см. 
+                        \ref{sec:baseitems_goods_area})
+                    \item Кнопка подгрузки.  (см. 
+                        \ref{sec:baseitems_goods_more})
+                    \item Важные ссылки (см. 
+                        \ref{sec:baseitems_important_links})
                     \item Копирайт (см. \ref{sec:baseitems_footer_copiright})
                 \end{itemize}
-            \item переход на страницы раздела каталога осуществляется из меню разделов магазина (см. \ref{sec:sections_menu})
-            \item страцины разделов каталога имеют url вида /catalog/<траслит названия>/ ,например /catalog/suveniry/
+            \item переход на страницы раздела каталога осуществляется из 
+                меню разделов магазина (см. \ref{sec:sections_menu})
+            \item страцины разделов каталога имеют url вида 
+                /catalog/<траслит названия>/ ,например /catalog/suveniry/
         \end{enumerate}
 
         
@@ -377,13 +449,18 @@
             Активное фото, кроме изображения товара имеет ещё несколько элементов
             
             \begin{enumerate}
-                \item Иконка <<Новое>> - выводится, если у товара выставлен флаг <<новинка>>
-                \item Иконка <<Хит>> - выводится, если у товара выставлен флаг <<лидер продаж>>
-                \item Иконка <<Акция>> - выводится, если у товара выставлен флаг <<спецпредложение>>
+                \item Иконка <<Новое>> - выводится, если у товара выставлен 
+                    флаг <<новинка>>
+                \item Иконка <<Хит>> - выводится, если у товара выставлен 
+                    флаг <<лидер продаж>>
+                \item Иконка <<Акция>> - выводится, если у товара выставлен 
+                    флаг <<спецпредложение>>
                 \item Цена в баллах 
                 \item Число желающих - показывает сколько пользователей группы 
-                    \glossary{auth_user} выбрали этот товар в качестве желаемого 
-                    кликом на сердечко. Неавторизованный пользователь может видеть
+                    \glossary{auth_user} выбрали этот товар в качестве 
+                        желаемого 
+                    кликом на сердечко. Неавторизованный пользователь может 
+                        видеть
                     эту цифру, но не может добавить товар в желаемое.
             \end{enumerate}
 
@@ -392,11 +469,14 @@
             См. рис. \ref{fig:goods_cart}
             
             \begin{enumerate}
-                \item Представляет из себя набор иконок расположенных вертикально.
+                \item Представляет из себя набор иконок расположенных 
+                    вертикально.
                 \item Каждая иконка размером 60$\times$60 пикселей.
-                \item Каждая иконка отображает уменьшенное изображение одной из фотографий товара.
+                \item Каждая иконка отображает уменьшенное изображение одной 
+                из фотографий товара.
                 \item Активная иконка выделена прямоугольником.
-                \item При выборе иконки в область <<активное фото>> (см. \ref{sec:noauth_active_photo}) 
+                \item При выборе иконки в область <<активное фото>> (см. 
+                \ref{sec:noauth_active_photo}) 
                     загружается увеличенное изображений выбранной иконки.
             \end{enumerate}
             
@@ -406,25 +486,32 @@
 
                         
             \begin{enumerate}
-                \item Блок информирует посетителя о наличии товара в точках получения (складах)
-                \item Информацию о наличии товара на каждом складе можно посмотреть, выбрав соответствующий элемент управления
-                \item Информация о наличии товара отображается в виде нечеткой количественной характеристики 
+                \item Блок информирует посетителя о наличии товара в точках 
+                получения (складах)
+                \item Информацию о наличии товара на каждом складе можно 
+                посмотреть, выбрав соответствующий элемент управления
+                \item Информация о наличии товара отображается в виде 
+                нечеткой количественной характеристики 
                     \begin{itemize}
                         \item от 1 до 10 --- <<мало>>;
                         \item от 11 до 100 --- <<достаточно>>;
                         \item от 101  --- <<много>>;
                         \item 0  --- <<отсутствует>>.
                     \end{itemize}
-                \item Кроме информации о наличии отображается краткая информация о складе
+                \item Кроме информации о наличии отображается краткая 
+                информация о складе
                     \begin{itemize}
                         \item адрес;
                         \item телефон;
                         \item режим работы;
                         \item сайт.
                     \end{itemize}
-                \item Информация о наличии товара на складе зависит от выбранной характеристики товара
+                \item Информация о наличии товара на складе зависит от 
+                выбранной характеристики товара
                     (см .\ref{sec:goods_cart_props}). 
-                \item Вместе с характеристиками товара (см.\ref{sec:goods_cart_props}) позволяет указать конкретное \gloss{offer}
+                \item Вместе с характеристиками товара 
+                (см.\ref{sec:goods_cart_props}) позволяет указать конкретное 
+                    \\\gloss{offer}
                     для приобретения
             \end{enumerate}
             
@@ -434,9 +521,12 @@
 
             \begin{enumerate}
                 \item Товар может иметь характеристики, например цвет
-                \item От выбранной характеристики товара зависит отображение количества товара с данной характеристикой
+                \item От выбранной характеристики товара зависит отображение 
+                количества товара с данной характеристикой
                     на складах (см .\label{sec:goods_cart_store})
-                \item Вместе с выбором склада (см.\ref{sec:goods_cart_stores}) позволяет указать конкретное \gloss{offer}
+                \item Вместе с выбором склада 
+                (см.\ref{sec:goods_cart_stores}) позволяет указать 
+                конкретное \\\gloss{offer}
                     для приобретения
             \end{enumerate}
         
@@ -444,31 +534,40 @@
             См. рис. \ref{fig:goods_cart_props}
 
             \begin{enumerate}
-                \item Средняя оценка складывается из оценок, поставленных в отзывах к товару (см.\ref{sec:auth_comments})
-                \item Оценку товару может поставить только тот, кто его заказывал.
+                \item Средняя оценка складывается из оценок, поставленных в 
+                отзывах к товару (см.\ref{sec:auth_comments})
+                \item Оценку товару может поставить только тот, кто его 
+                заказывал.
             \end{enumerate}
 
         \subsection{Сообщение <<необходимо набрать N баллов>>}
             См. рис. \ref{fig:goods_cart_props}
             \begin{enumerate}
-                \item Сообщение выводится в случае, если на счету пользователя недостаточно баллов для покупки 
-                \item Для неавторизованного пользователя это сообщение выводится в любом случае
+                \item Сообщение выводится в случае, если на счету 
+                пользователя недостаточно баллов для покупки 
+                \item Для неавторизованного пользователя это сообщение 
+                выводится в любом случае
             \end{enumerate}
 
         \subsection{Название товара}
             См. рис. \ref{fig:goods_cart_props}
             \begin{enumerate}
-                \item Название товара выводится общее для всех разновидностей товара с различными характеристиками 
-                \item Название товара фигурирует в url карточки товара по шаблону /catalog/<транслит раздела>/<транслит
-                    названия товара>-<первый блок XML-ID>, например /catalog/raznoe/test-obmena-s-saytom-9dd0b924/ (см.
+                \item Название товара выводится общее для всех 
+                разновидностей товара с различными характеристиками 
+                \item Название товара фигурирует в url карточки товара по 
+                шаблону /catalog/<транслит раздела>/<транслит
+                    названия товара>-<первый блок XML-ID>, например 
+                    /catalog/raznoe/test-obmena-s-saytom-9dd0b924/ (см.
                     \gloss{XMLID})
             \end{enumerate}
 
             
         \subsection{Артикул}
             \begin{enumerate}
-                \item Сообщение выводится в случае, если на счету пользователя недостаточно баллов для покупки 
-                \item Для неавторизованного пользователя это сообщение выводится в любом случае
+                \item Сообщение выводится в случае, если на счету 
+                пользователя недостаточно баллов для покупки 
+                \item Для неавторизованного пользователя это сообщение 
+                выводится в любом случае
             \end{enumerate}
 
         \subsection{Описание}
@@ -480,21 +579,35 @@
         \subsection{Сообщение <<срок действия вашего заказа>>}
             \label{sec:goods_expires}
             \begin{enumerate}
-                \item количество дней, в течение которых после осуществления заказа через сайт необходимо получить поощрение
-                \item по окончанию срока заказу присваивается статус <<аннулирован>>
+                \item количество дней, в течение которых после осуществления 
+                заказа через сайт необходимо получить поощрение
+                \item по окончанию срока заказу присваивается статус 
+                <<аннулирован>>
             \end{enumerate}
         
         \subsection{Сообщение <<использовать до>>}
             \begin{enumerate}
-                \item Для материальных поощрений это дата, когда истекает <<срок действия вашего заказа>> (см. \ref{sec:goods_expires}).
-                \item Для мероприятий с назначенной датой проведения это дата проведения.
-                \item Для выставок и мероприятий, идущих несколько дней это либо последний день проведения мероприятия, 
-                    либо <<срок действия вашего заказа>> (см. \ref{sec:goods_expires}) (что раньше наступит)
+                \item Для материальных поощрений это дата, когда истекает 
+                <<срок действия вашего заказа>> (см. \ref{sec:goods_expires}).
+                \item Для мероприятий с назначенной датой проведения это 
+                дата проведения.
+                \item Для выставок и мероприятий, идущих несколько дней это 
+                либо последний день проведения мероприятия, 
+                    либо <<срок действия вашего заказа>> (см. 
+                    \ref{sec:goods_expires}) (что раньше наступит)
             \end{enumerate}
             
-        \subsection{Отзывы.}
+        \subsection{Отзывы.}\label{sec:noauth_otz}
             \begin{enumerate}
-                \item Отзывы с оценкой, оставленные пользователями, которые приобрели поощрение.
+                \item Отзывы с оценкой, оставленные пользователями, которые 
+                приобрели поощрение.
+                \item Каждый из отзывов содержит
+                    \begin{itemize}
+                        \item ФИО
+                        \item оценку;
+                        \item комментарий;
+                        \item дату.
+                    \end{itemize}
             \end{enumerate}
 
         \begin{figure}
@@ -517,8 +630,10 @@
             
             \begin{enumerate}
                 \item Раздел находится по адресу /rules/hiw/.
-                \item Раздел описывает общие термины и правила заказа поощрений в магазине.
-                \item Раздел заполняется пользователями группы <<\gloss{content_editor}>> в \gloss{CMS}.
+                \item Раздел описывает общие термины и правила заказа 
+                поощрений в магазине.
+                \item Раздел заполняется пользователями группы 
+                <<\gloss{content_editor}>> в \gloss{CMS}.
             \end{enumerate}
 
         \begin{figure}
@@ -534,17 +649,26 @@
             см рис. \ref{fig:page_address}
             
             \begin{enumerate}
-                \item Отображает список центров госуслуг, в которых можно получить поощрение.
+                \item Отображает список центров госуслуг, в которых можно 
+                получить поощрение.
                 \item Раздел находится по адресу /rules/stores/
-                \item Раздел формируется из информации об объектах типа \gloss{storage}, полученных из \gloss{UNF} в результате действия \gloss{import1c}.
-                \item Адрес конкретного центра услуг имеет вид /rules/stores/\#<ID центра>, например /rules/stores/\#24
+                \item Раздел формируется из информации об объектах типа 
+                \gloss{storage}, полученных из \gloss{UNF} в результате 
+                действия \gloss{import1c}.
+                \item Адрес конкретного центра услуг имеет вид 
+                /rules/stores/\#<ID центра>, например /rules/stores/\#24
                 \item Раздел имеет форму вертикального <<аккордиона>>. 
-                \item Каждый элемент аккордиона - ссылка. Текст ссылки - название центра и полный адрес.
-                \item При клике на любую ссылку аккордиона открывается блок с подробной информацией, включающей:
+                \item Каждый элемент аккордиона - ссылка. Текст ссылки - 
+                    название центра и полный адрес.
+                \item При клике на любую ссылку аккордиона открывается блок 
+                    с подробной информацией, включающей:
                     \begin{itemize}
-                        \item Яндекс-карту с отметкой (карта и отметка формируются 
-                            из API яндекс-карт по полному адресу, передаваемому во время действия 
-                            \gloss{import1c}, поэтому важно контролировать полноту и корректность этого адреса);
+                        \item Яндекс-карту с отметкой (карта и отметка 
+                            формируются 
+                            из API яндекс-карт по полному адресу, 
+                                передаваемому во время действия 
+                            \gloss{import1c}, поэтому важно контролировать 
+                                полноту и корректность этого адреса);
                         \item телефон;
                         \item режим работы;
                         \item адрес сайта;
@@ -565,11 +689,16 @@
             \begin{enumerate}
                 \item Отображает список ответов на часто задаваемые вопросы.
                 \item Раздел находится по адресу /rules/faq/
-                \item Раздел формируется из информации, вносимой пользователями группы \gloss{content_editor} в \gloss{CMS}.
-                \item Адрес конкретного ответа на вопрос имеет вид /rules/faq/\#<транслит вопроса>, например /rules/faq/\#kak\_stat\_uchastnikom\_proekta\_aktivnyy\_grazhdanin
+                \item Раздел формируется из информации, вносимой 
+                    пользователями группы \gloss{content_editor} в \gloss{CMS}.
+                \item Адрес конкретного ответа на вопрос имеет вид 
+                    /rules/faq/\#<транслит вопроса>, например 
+             /rules/faq/\#kak\_stat\_uchastnikom\_proekta\_aktivnyy\_grazhdanin
                 \item Раздел имеет форму вертикального <<аккордиона>>. 
-                \item Каждый элемент аккордиона - ссылка. Текст ссылки - вопрос.
-                \item При клике на любую ссылку аккордиона открывается блок с ответом на вопрос
+                \item Каждый элемент аккордиона - ссылка. Текст ссылки - 
+                    вопрос.
+                \item При клике на любую ссылку аккордиона открывается блок 
+                    с ответом на вопрос
             \end{enumerate}
             
 
