--- a/docs/manual/source/07_external_services/index.tex
+++ b/docs/manual/source/07_external_services/index.tex
@@ -14,7 +14,7 @@
     \section{Связь заказа в \gloss{shop} и \gloss{UNF}}
         \begin{enumerate}
             \item Связь устанавливается во время действия \gloss{exchange1c}.
-            \item Связь устанавливается на основе специального поля <<номер заказа>> в \gloss{UNF} и номера \gloss{BXORDER}.
+            \item Связь устанавливается на основе \gloss{XMLID} заказа.
         \end{enumerate}
     
     \section{Связь объектов \gloss{AGTRANSACT} и \gloss{BXTRANSACT}}
