--- a/docs/manual/source/index.tex
+++ b/docs/manual/source/index.tex
@@ -22,7 +22,8 @@
 \usepackage{icomma} % "Умная" запятая: $0,2$ --- число, $0, 2$ --- перечисление
 
 %% Номера формул
-%\mathtoolsset{showonlyrefs=true} % Показывать номера только у тех формул, на которые есть \eqref{} в тексте.
+%\mathtoolsset{showonlyrefs=true} % Показывать номера только у тех формул, 
+% на которые есть \eqref{} в тексте.
 %\usepackage{leqno} % Немуреация формул слева
 
 %% Свои команды
@@ -40,7 +41,7 @@
 \usepackage{wrapfig} % Обтекание рисунков текстом
 
 %%% Работа с таблицами
-\usepackage{array,tabularx,tabulary,booktabs} % Дополнительная работа с таблицами
+\usepackage{array,tabularx,tabulary,booktabs}%Дополнительная работа с таблицами
 \usepackage{longtable}  % Длинные таблицы
 \usepackage{multirow} % Слияние строк в таблице
 
